<resources>
    <string name="app_name">InmobiliariaRetrofit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="contratos">Contratos</string>
    <string name="logout">Logout</string>
    <string name="datos_del_propietario">Datos del propietario</string>
    <string name="nombre">Nombre</string>
    <string name="n">n</string>
    <string name="apellido">Apellido</string>
    <string name="dni_n">DNI Nº</string>
    <string name="tel_fono">Teléfono</string>
    <string name="email">Email</string>
    <string name="valor">Valor</string>
    <string name="longitud">Longitud</string>
    <string name="latitud">Latitud</string>
    <string name="tipo">Tipo</string>
    <string name="uso">Uso</string>
    <string name="direccion">Direccion</string>
    <string name="superficie">Superficie</string>
    <string name="ambientes">Ambientes</string>
    <string name="editar">editar</string>
    <string name="imagen_del_inmueble">Imagen del inmueble</string>
    <string name="nuevo" />
    <string name="_34_1234">-34.1234</string>
    <string name="resetear_contrase_a">Resetear contraseña</string>
    <string name="introduzca_nueva_contrase_a">Introduzca nueva contraseña</string>
    <string name="cambiar">Cambiar</string>
    <string name="repita_contrase_a">Repita contraseña</string>
    <string name="introduzca_contrase_a">Introduzca contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="dni">DNI</string>
    <string name="contrase_a_actual">Contraseña actual</string>
</resources>