<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.prueba.inmobiliariaretrofit.ui.home.HomeFragment"
        android:label="@string/Inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.prueba.inmobiliariaretrofit.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambioPassFragment"
            app:destination="@id/cambioPassFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.prueba.inmobiliariaretrofit.ui.inmuebles.InmueblesFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.prueba.inmobiliariaretrofit.ui.inquilinos.InquilinoFragment"
        android:label="@string/inquilinos"
        tools:layout="@layout/fragment_inquilino" >
        <action
            android:id="@+id/action_nav_inquilinos_to_detalleInquilinoFragment"
            app:destination="@id/detalleInquilinoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.prueba.inmobiliariaretrofit.ui.contratos.ContratosFragment"
        android:label="@string/contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.prueba.inmobiliariaretrofit.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />


    <fragment
        android:id="@+id/d"
        android:name="com.prueba.inmobiliariaretrofit.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.prueba.inmobiliariaretrofit.ui.inmuebles.detalleInmueble.DetalleInmuebleFragment"
        android:label="detalle inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>

    <fragment
        android:id="@+id/nav_agregarInmueble"
        android:name="com.prueba.inmobiliariaretrofit.ui.inmuebles.agregar.AgregarInmuebleFragment"
        android:label="Agregar Inmueble"
        tools:layout="@layout/fragment_agregar_inmueble">

        <action
            android:id="@+id/action_nav_agregarInmueble_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/cambioPassFragment"
        android:name="com.prueba.inmobiliariaretrofit.ui.perfil.cambiarContrasena.cambioPassFragment"
        android:label="fragment_cambio_pass"
        tools:layout="@layout/fragment_cambio_pass" >
        <action
            android:id="@+id/action_cambioPassFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
    <fragment
        android:id="@+id/detalleInquilinoFragment"
        android:name="com.prueba.inmobiliariaretrofit.ui.inquilinos.detalleInquilino.detalleInquilinoFragment"
        android:label="fragment_detalle_inquilino"
        tools:layout="@layout/fragment_detalle_inquilino" >
        <action
            android:id="@+id/action_detalleInquilinoFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/detalleContratoFragment"
        android:name="com.prueba.inmobiliariaretrofit.ui.contratos.detalleContrato.detalleContratoFragment"
        android:label="fragment_detalle_contrato"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
    </fragment>


</navigation>